Small style changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <div class="container">
+      <div class="weather-app-wrapper">
         <div class="weather-app">
             <div class="row">
 
@@ -63,8 +64,9 @@
         </small>
             
 
-
+</div>
     </div>
+
     
 
 </body>
