--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-from">
+            <div class="row">
+            <div class="col-6 form-style">
+            <input type="search" placeholder="Type a city.." class="form-control" id="city-input" autocomplete="off"/>
+            </div>
+            <div class="col-2 form-style">
+            <input type="submit" value="Search" class="btn btn-primary btn-block"/>
+          </div>
+          </div>
+          </form>
             <div class="row">
 
             
@@ -65,7 +75,7 @@
             </div>
 
             </div>
-            </div>
+
         <small>
           <a href="https://github.com/KlaraWK/vanilla-weather-app" target="_blank">Open-source code</a>, by KWK
         </small>
