Final adjustments inl. current Location

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <div class="col-2 form-style">
             <input type="submit" value="Search" class="btn btn-primary btn-block"/>
           </div>
+          <div class="col-2 field text-center" id="buttonCurrent">
+        <button type="submit" class="btn btn-secondary current">Current</button>
+        </div>
           </div>
           </form>
           <div class="row">
@@ -76,7 +79,7 @@
           </div>
           
           <small>
-            <a href="https://github.com/KlaraWK/vanilla-weather-app" target="_blank">Open-source code</a>, by KWK
+            <a href="https://github.com/KlaraWK/my-vanilla-weather-app" target="_blank">Open-source code</a>, by KWK
           </small>
 
             
