CSS style update

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <input type="search" placeholder="Type a city.." class="form-control" id="city-input" autocomplete="off"/>
             </div>
             <div class="col-2 form-style">
-            <input type="submit" value="Search" class="btn btn-primary btn-block"/>
+            <input type="submit" value="Search" class="btn btn-primary btn-block search"/>
           </div>
           <div class="col-2 field text-center" id="buttonCurrent">
-        <button type="submit" class="btn btn-secondary current">Current</button>
+        <button type="button" class="btn btn-secondary current">Current</button>
         </div>
           </div>
           </form>
